--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-spa": "^0.2.2",
     "gulp-strip-comments": "^2.4.5",
     "gulp-uglify": "^3.0.0",
+    "gulp-filter":"",
     "gulp-useref": "^3.1.2"
   }
 }
