--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/highlight.js": "^9.1.9",
     "angular2-highlight-js": "^5.0.1",
+    "angular2-markdown": "^1.6.0",
     "core-js": "^2.4.1",
     "highlightjs": "^9.10.0",
     "rxjs": "^5.1.0",
